--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ header {
 
 h1 {
 	font-family: "Oswald", sans-serif;
-	background-color: rgba(45, 45, 45, 0.1);
+	background-color: #96ccd3;
 	padding: 10px;
 	font-size: 50px;
 }
@@ -32,3 +32,17 @@ footer {
 	background-color: #1b2127;
 	color: white;
 }
+
+.hero {
+	background-color: #db5252;
+}
+
+.hero-image{
+	background-color: white;
+	padding: 10px;
+}
+
+.container {
+	display: flex;
+	align-items: center;
+}	
