--- a/css/estilos.css
+++ b/css/estilos.css
@@ -468,7 +468,8 @@ figure {
 
 @media screen and (max-width: 480px) {
   h1 {
-    font-size: 1.5em;
+    font-size: 1.8em;
+    background-color: rgba(9, 25, 48, 0.562);
   }
   .project-details {
     font-size: 14px;
